# IN3110

./: README.md
assignment1/: README.md  friendly_greeting.txt  gitconflict.txt  less_friendly_greeting.txt  myfirstcommit.txt
assignment2/: README.md  array_class.py  test_array.py
assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/UNKNOWN.egg-info/: SOURCES.txt
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  example-plot.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  test.py  time_planner.py
assignment4/tests/: test_collect_dates.py  test_fetch_player_statistics.py  test_time_planner.py
