[build-system]
requires = [
    "setuptools",
    # 4110 only:
    #"cython",
    #"numpy==1.21.*",
]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
requires-python = ">=3.7"
license = {text = "MIT License"}
name = "instapy"
description = "A python package for turning an image into a grayscale or nostalgic sepia image"
readme = "README.md" 
dependencies = [ 
    "requests",
    'importlib-metadata; python_version<"3.8"',
    "numpy",
    "pillow",
    "numba",
]


[project.scripts]
instapy = "instapy.cli:main"
